feat: doc RecipesCategories & Favourites
